# link-bubble

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DEV-PLAN-20260509-2337.md  GEMINI.md  README.md  REVIEW-20260509-2220.md  WORKLOG.md  Windows.md  build_fix_summary.md  filtered_app_log.txt  fix_plan.md  logcat.txt  package-lock.json  package.json  project-handbook.md  temp_ops.py
.github/workflows/: build.yml  ci.yml  release.yml
Application/: .gitignore  build.gradle  gradle.properties
Application/LinkBubble/: brave3.txt  brave4.txt  build.gradle  com.linkbubble.playstore.dev.txt  filtered_app_log.txt  filtered_app_log2.txt  filtered_app_log3.txt  gradlew.bat  logcat_output.txt  proguard-rules.pro
Application/LinkBubble/src/main/: AndroidManifest.xml  AndroidManifest.xml.template
Application/LinkBubble/src/main/assets/: adblock_hosts.txt  adblock_whitelist.txt
Application/LinkBubble/src/main/assets/pagescripts/: AddInsertion.js  HideBrokenImages.js  SelectElements.js  ThemeColor.js  TouchIcon.js  YouTube.js
Application/LinkBubble/src/main/jni/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  base.h  cmake_install.cmake
Application/LinkBubble/src/main/jni/debug/: debug.h  functions.h  hash_set.h  macros.h  safe_base.h  safe_iterator.h  safe_sequence.h
Application/LinkBubble/src/main/res/layout/: activity_history.xml  (+7 more)
Application/gradle/wrapper/: gradle-wrapper.properties
docs/: android15-compatibility-review.md  node-dependency-findings.md
scripts/: copyJNIFiles.js  copyJNIFiles.ps1  updateTranslations.js
tests/: test_temp_ops.py
(+66 files in other folders)
